--- a/KEN_NFC_NEW/ScannerPage.xaml
+++ b/KEN_NFC_NEW/ScannerPage.xaml
@@ -18,10 +18,10 @@
         <StackLayout>
             <zxing:ZXingScannerView x:Name="ScannerView"
                                     IsScanning="True"
-                                    OnScanResult="ZXingScannerView_OnScanResult"/>
+                                    OnScanResult="ScanResult"/>
             <Button Text="Terug"
                     Padding="0"
-                    Clicked="Button_Clicked_Back"/>
+                    Clicked="BackButtonClicked"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
