Crude fix for file saving when gps is not working and change button color when in write mode\

--- a/KEN_NFC_NEW/MainPage.xaml
+++ b/KEN_NFC_NEW/MainPage.xaml
@@ -42,6 +42,7 @@
 
                 <Button Clicked="Button_Clicked_StartWriting"
                             IsEnabled="True"
+                            x:Name="writeButton"
                             Text="Chip schrijven" />
             </StackLayout>
 
